--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
              </div>
          
               <div id="contact">
-                 <h1>Не пишите мне, я шиp</h1> 
+                 <h1>Не пишите мне, я шиз</h1> 
                  <form>
                      <input type="text" placeholder="нахуй" required>
                      <input type="email" placeholder="иди" required><br>
